--- a/Module_1/Case_Study/Yeu_cau_6_quan_ly_hoc_vien/index.html
+++ b/Module_1/Case_Study/Yeu_cau_6_quan_ly_hoc_vien/index.html
@@ -3,21 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="style.css">
+    <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+           rel="stylesheet"
+           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+           crossorigin="anonymous">
     <title>Quản lý học diên</title>
 </head>
 <body>
-<div id="container">
+<div class="container">
     <img src="logo CodeGym.jpg" height="100" width="100"/>
-    <h1>Hệ thống quản lý bài tập Case study module 1</h1>
+    <h1 style="text-align: center">Hệ thống quản lý bài tập Case study module 1</h1>
+    <div class="horizontal-line"></div>
+    <table>
+        <tr style="background-color: powderblue" >
+            <th colspan="2">Thông tin học viên</th>
+        </tr>
+        <tr>
+            <th>Mã sinh viên</th>
+            <td><input type="number" id="id"/></td>
+        </tr>
+        <tr>
+            <th>Name</th>
+            <td><input type="text" id="name"/></td>
+        </tr>
+        <tr>
+            <th>Lớp</th>
+            <td><input type="text" id="grade"/></td>
+        </tr>
+        <tr>
+            <th>Email</th>
+            <td><input type="text" id="email"/></td>
+        </tr>
+        <tr>
+            <th>Ngày sinh</th>
+            <td><input type="text" id="birthday"/></td>
+        </tr>
 
-    <button onclick="handleNewStudent()">Thêm mới học viên</button>
-    <button onclick="deleteStudent()">xóa học viên</button>
+        <tr>
+            <th></th>
+            <td>
+                <button style="background-color: #24cb08" onclick="handleAddNewStudent()">Add</button>
+                <button style="background-color: red" onclick="updateStudent()">Update</button>
+            </td>
+        </tr>
+    </table>
 
 
 
-    <div id="riot">
-    </div>
+    <div class="tableStudent" id="root"></div>
 </div>
 
 <script src="script.js"></script>
