--- a/Module_1/Case_Study/Yeu_cau_6_quan_ly_hoc_vien/index.html
+++ b/Module_1/Case_Study/Yeu_cau_6_quan_ly_hoc_vien/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
     <img src="logo CodeGym.jpg" height="100" width="100"/>
-    <h1 style="text-align: center">Hệ thống quản lý bài tập Case study module 1</h1>
+    <h1 style="text-align: center">Hệ thống quản lý học viên tại CodeGym</h1>
     <div class="horizontal-line"></div>
     <table>
         <tr style="background-color: powderblue" >
