--- a/Module_1/Luyen_tap/Danh_sach_hoc_vien/danh_sach.html
+++ b/Module_1/Luyen_tap/Danh_sach_hoc_vien/danh_sach.html
@@ -20,9 +20,9 @@
             border: 1px solid black; width: 700px; float: right
         }
         table{
-            text-align:center;
-            border:1px solid black;
-            width:300px;
+                text-align:center;
+                border:1px solid black;
+                width:300px;
         }
     </style>
 </head>
@@ -61,7 +61,7 @@
             <th></th>
             <td>
                 <button style="background-color: #24cb08" onclick="handleAddNewStudent()">Add</button>
-                <button style="background-color: red" onclick="updateStudent">Save</button>
+                <button style="background-color: red" onclick="updateStudent()">Save</button>
             </td>
         </tr>
     </table>
